--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -55,7 +55,7 @@ a {
 }
 
 .divider {
-  width: 330px;
+  max-width: 330px;
   height: 1px;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.5);
